Resolve conflict